--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,24 @@
   --muted: #6f7d99;
 }
 
+@font-face {
+  font-family: "Myanmar Text";
+  src: url("./assets/fonts/myanmar-text/mmrtext.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Myanmar Text";
+  src: url("./assets/fonts/myanmar-text/mmrtextb.ttf") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+body {
+  font-family: "Myanmar Text", "Inter", "Poppins", system-ui, sans-serif;
+}
+
 .hero-page {
   width: 100%;
   background: #fff;
@@ -223,7 +241,7 @@
   font-size: clamp(2.6rem, 4vw, 3.5rem);
   margin: 1rem 0;
   line-height: 1.2;
-  color: #fff;
+  color: #ffcc00;
 }
 
 .hero-subtext {
@@ -1717,4 +1735,3 @@
     flex: 0 1 100%;
   }
 }
-
