feat(ui):change some ui

--- a/src/App.css
+++ b/src/App.css
@@ -415,7 +415,7 @@ body {
   font-weight: 600;
   overflow: hidden;
   letter-spacing: 0.02em;
-  background-color: #ffd400;
+  background-color: #5472D2;
 }
 
 .btn-style-one:hover {
