--- a/public/css/style.css
+++ b/public/css/style.css
@@ -66,7 +66,7 @@ hr {
   width: 70px;
   text-align: center;
   position: relative;
-  background: #1e7a46;
+  background: #5472D2;
   margin-bottom: 20px;
   border: 0;
 }
@@ -104,17 +104,19 @@ hr {
   bottom: -1px;
   width: 0;
   height: 2px;
-  background: #ffffff;
+  background: #5472D2;
   content: "";
   transition: width 0.2s;
 }
 #menu.navbar-default .navbar-nav > li > a:hover:after {
   width: 100%;
 }
+.navbar-default .navbar-nav > li > a.active,
 .navbar-default .navbar-nav > .active > a,
 .navbar-default .navbar-nav > .active > a:hover,
 .navbar-default .navbar-nav > .active > a:focus {
   background-color: transparent;
+  color: #5472D2;
 }
 .navbar-default .navbar-nav > .active > a:after,
 .navbar-default .navbar-nav > .active > a:hover:after,
@@ -125,7 +127,7 @@ hr {
   bottom: -1px !important;
   width: 100% !important;
   height: 2px !important;
-  background: #6f7d99!important;
+  background: #5472D2!important;
   content: "" !important;
   transition: width 0.2s !important;
 }
